Fixed default tab. Changed default autoPlayNextEpisode to true. Version for TV

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 15
-        versionName "1.5.1"
+        versionName "1.5.1-TV"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
